--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.5.0",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.0"
   }
